// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div
    class="css-hajjsy"
  >
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-in3yi3"
      >
        Region
      </p>
    </div>
    <hr
      aria-orientation="vertical"
      class="chakra-divider css-8w54o2"
    />
    <div
      class="chakra-stack css-1mlvmbj"
    >
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-0"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            North America
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-1"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            South America
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-2"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            Europe
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-3"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            Africa
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-4"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            Asia
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-5"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            ANZ
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders with click on going back 1`] = `
<div>
  <div
    class="css-hajjsy"
  >
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-in3yi3"
      >
        Region
      </p>
    </div>
    <hr
      aria-orientation="vertical"
      class="chakra-divider css-8w54o2"
    />
    <div
      class="chakra-stack css-1mlvmbj"
    >
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-0"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            North America
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-1"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            South America
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-2"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            Europe
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-3"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            Africa
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-4"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            Asia
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-5"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            ANZ
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders with click on region 1`] = `
<div>
  <div
    class="css-hajjsy"
  >
    <div
      class="css-70qvj9"
    >
      <button
        class="chakra-button css-om5gvo"
        data-testid="button-region-back"
        type="button"
      >
        &lt;
      </button>
      <p
        class="chakra-text css-in3yi3"
      >
        North America
      </p>
    </div>
    <hr
      aria-orientation="vertical"
      class="chakra-divider css-8w54o2"
    />
    <div
      class="chakra-stack css-1mlvmbj"
    >
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-1"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            South America
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-2"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            Europe
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-3"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            Africa
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-4"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            Asia
          </span>
        </span>
      </button>
      <button
        class="chakra-button css-4xx2wk"
        data-testid="button-region-5"
        type="button"
      >
        <span
          class="css-1ehzxp"
        >
          <span
            class="css-zvlevn"
          >
            ANZ
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
